# testsoftware

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/workflows/: build-windows.yml  tests.yml
config/: park.example.env
docs/: ASSET_SYNC.md  CURRENT_SYSTEM.md  ECOSYSTEM.md  INSTALL_WINDOWS.md  PARK_CONFIG.md  PC_SETUP_CHECKLIST.md  SUPABASE_SETUP.md
legacy/: README.md
legacy/uploader/: speed_bridge.py  uploader.bat  uploader.py  uploader_combined.env.example  uploader_combined.py
scripts/: build_exe.ps1  healthcheck.ps1  install_liftpic_sync_bootstrap.ps1  install_windows_service.ps1  restart_service.ps1  rollback.ps1  run_dev.ps1
src/liftpic_sync/: __init__.py  asset_sync.py  cli.py  config.py  envfile.py  filename_codec.py  files.py  identity.py  logging_setup.py  operational_monitor.py  remote_config.py  ride_tracker.py  scanner.py  service.py  speed.py  state.py  statusfiles.py  supabase_client.py  uploader.py
supabase/: config.toml
supabase/functions/_shared/: auth.ts  supabase.ts
supabase/functions/liftpic-assets/: index.ts
supabase/functions/liftpic-config/: index.ts
supabase/functions/liftpic-ingest-begin/: index.ts
supabase/migrations/: 0001_liftpic_sync.sql  0002_liftpic_machine_configs.sql  0003_liftpic_asset_deployments.sql  0004_paper_capacity.sql  0005_machine_status_read_policy.sql
tests/: test_asset_sync.py  test_envfile.py  test_envfile_encoding.py  test_filename_codec.py  test_operational_monitor.py  test_ride_tracker.py  test_scanner.py  test_service.py  test_speed.py  test_state_requeue.py  test_statusfiles.py
(+2 files in other folders)
